# bitaxe-fleet

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT.md  README.md  TODO.md  hacs.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  validate.yml
custom_components/bitaxe_fleet/: __init__.py  aggregates.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  history.py  manifest.json  panel.py  recovery.py  redaction.py  runtime.py  sensor.py  services.py  services.yaml  storage.py  strings.json  websocket.py
custom_components/bitaxe_fleet/axeos/: __init__.py  client.py  errors.py  models.py  parser.py  wire.py
custom_components/bitaxe_fleet/discovery/: __init__.py  active_scan.py  manager.py  models.py
custom_components/bitaxe_fleet/translations/: en.json
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: bitaxe-fleet-panel.test.ts  bitaxe-fleet-panel.ts
scripts/: __init__.py  package_release.py
tests/: conftest.py  test_aggregates.py  test_axeos_client.py  test_axeos_parser.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_discovery.py  test_history.py  test_init.py  test_package_release.py  test_panel.py  test_recovery.py  test_redaction.py  test_runtime_profiles.py  test_sensor.py  test_services.py  test_storage.py  test_websocket.py
tests/fixtures/axeos/: README.md  system_asic_malformed_synthetic.json  system_asic_partial_synthetic.json  system_asic_v2_14_synthetic.json  system_info_malformed_synthetic.json  system_info_partial_synthetic.json  system_info_v2_14_synthetic.json  system_logs_malformed_synthetic.json  system_logs_partial_synthetic.txt  system_logs_v2_14_synthetic.txt
